<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8D4F0"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="50dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:cardCornerRadius="75dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/foto_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ldlBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/bienvenid_a_logodix"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:maxWidth="488dp"
        android:layout_height="wrap_content"
        android:autofillHints="Introduce email"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/introduce_tu_correo_electr_nico"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#333333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:maxWidth="488dp"
        android:layout_height="wrap_content"
        android:autofillHints="Introduce contraseña"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/introduce_la_contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnIniciaSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#AD1457"
        android:fontFamily="casual"
        android:text="@string/iniciar_sesi_n"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/no_tienes_cuenta"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A86ECE"
        android:fontFamily="casual"
        android:text="@string/reg_strate"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtOlvidoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/has_olvidado_tu_contrase_a"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRecuperarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#8E638E"
        android:fontFamily="casual"
        android:text="@string/recuperar_contrase_a"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
