<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8D4F0"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="70dp"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/txtBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/bienvenid"
        android:textColor="#AD1457"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEligeActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:shadowColor="#AD1457"
        android:text="@string/escoge_la_actividad_que_quieras"
        android:textColor="#0B0B0B"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFormPalabras"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0277BD"
        android:fontFamily="casual"
        android:text="@string/forma_las_palabras"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRealDiferente"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2478D7"
        android:fontFamily="casual"
        android:text="@string/elige_la_palabra_real"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#AD1457"
        android:fontFamily="casual"
        android:text="@string/puntuaciones_usuarios"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnClosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A372C3"
        android:fontFamily="casual"
        android:text="@string/cerrar_sesi_n"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>

