<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewRecuperar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8D4F0"
    android:padding="16dp"
    android:paddingTop="50dp">

    <LinearLayout
        android:id="@+id/linearLayoutRecuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Recuperar contraseña"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTituloRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/recuperar_password"
            android:textAlignment="center"
            android:textColor="#040404"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCorreoRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Recuperar Correo"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="sans-serif"
            android:hint="@string/introduce_tu_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#333333"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnObtenerPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#A75FD3"
            android:fontFamily="casual"
            android:text="@string/obtener_pregunta_de_seguridad"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblPreguntaSeguridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_de_seguridad"
            android:textSize="18sp"
            android:textColor="@color/_040404"
            android:textStyle="italic"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/txtRespuestaSeguridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:hint="@string/ingresa_tu_respuesta"
            android:inputType="text"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:textColor="#333333"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/txtNuevaContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Nueva Contraseña"
            android:hint="@string/nueva_contrase_a"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:textColor="#333333"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/txtConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Confirma Contraseña"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:textColor="#333333"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnActualizarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actualizar_contrase_a"
            android:textSize="20sp"
            android:backgroundTint="#8E638E"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
