<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#B8D4F0"
    tools:context=".FormarPalabrasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtInstrucciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="casual"
            android:text="@string/utiliza_todas_las_letras_para_formar_la_palabra_correcta"
            android:textColor="#0D0C0C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/contenedorLetras"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:layout_marginBottom="16dp"
            android:columnCount="6" />

        <TextView
            android:id="@+id/txtPalabraFormada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:text="@string/palabra_formada"
            android:textColor="#050505"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPuntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:text="@string/puntuaci_n_0"
            android:textColor="#040404"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal"
            android:paddingVertical="20dp">

            <Button
                android:id="@+id/btnAtras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B46FDE"
                android:fontFamily="casual"
                android:text="@string/atr_s"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#E26161"
                android:fontFamily="casual"
                android:text="@string/borrar"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnValidar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#66A447"
                android:fontFamily="casual"
                android:text="@string/validar"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/panelResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B8D4F0"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtPuntosFinales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/puntuaci_n_final_0"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
